<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/colorMainBG">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <TextView
                android:id="@+id/teamATextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/A_team_name_placeholder"
                android:layout_gravity="center"
                style="@style/teamNameTextStyle"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/teamAScoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_score"
                style="@style/scoreTextStyle"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"/>

            <Button
                android:id="@+id/teamAThreePointButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_point_button"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:onClick="teamAthreePointThrow"/>

            <Button
                android:id="@+id/teamATwoPointButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two_point_button"
                android:layout_marginBottom="8dp"
                android:onClick="teamATwoPointThrow"/>

            <Button
                android:id="@+id/teamAFreeThrowButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free_throw_button"
                android:layout_marginBottom="8dp"
                android:onClick="teamAFreeThrow"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:color/darker_gray">

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <TextView
                android:id="@+id/teamBTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/B_team_name_placeholder"
                android:layout_gravity="center"
                style="@style/teamNameTextStyle"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/teamBScoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_score"
                style="@style/scoreTextStyle"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"/>

            <Button
                android:id="@+id/teamBThreePointButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_point_button"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:onClick="teamBThreePointThrow"/>

            <Button
                android:id="@+id/teamBTwoPointButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two_point_button"
                android:layout_marginBottom="8dp"
                android:onClick="teamBTwoPointThrow"/>

            <Button
                android:id="@+id/teamBFreeThrowButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free_throw_button"
                android:layout_marginBottom="8dp"
                android:onClick="teamBFreeThrow"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_button"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:onClick="resetCounters"/>

    </LinearLayout>

</LinearLayout>